Added email verification when a user signs up
